--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "pg": "^8.11.5",
     "ws": "^8.16.0",
     "dotenv": "^16.4.5",
-    "jsonwebtoken": "^9.0.0"
+    "jsonwebtoken": "^9.0.0",
+    "express": "^4.18.2",
+    "bcryptjs": "^2.4.3"
   }
 }
