--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^16.4.5",
     "jsonwebtoken": "^9.0.0",
     "express": "^4.18.2",
-    "bcryptjs": "^2.4.3"
+    "bcryptjs": "^2.4.3",
+    "axios": "^1.4.0"
   }
 }
