--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jsonwebtoken": "^9.0.0",
     "express": "^4.18.2",
     "bcryptjs": "^2.4.3",
-    "axios": "^1.4.0"
+    "axios": "^1.4.0",
+    "cors": "^2.8.5"
   }
 }
